--- a/composer.json
+++ b/composer.json
@@ -6,8 +6,8 @@
     "license": "MIT",
     "require": {
         "php": "7.1.*",
-        "doctrine/orm": "2.5.*",
-        "symfony/dependency-injection": "2.8.*"
+        "doctrine/orm": "^2.5",
+        "symfony/dependency-injection": "2.8.*|^4.0"
     },
     "autoload": {
         "psr-0": { "Oro\\Component\\DoctrineUtils": "" }
